--- a/src/main/java/utfpr/projetolpoo/view/paciente/PacienteView.form
+++ b/src/main/java/utfpr/projetolpoo/view/paciente/PacienteView.form
@@ -243,6 +243,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="tfResponsavel">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfResponsavelActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="try{ &#xd;&#xa;javax.swing.text.MaskFormatter cpf= new javax.swing.text.MaskFormatter(&quot;###.###.###-##&quot;);&#xd;&#xa;tfResponsavel = new javax.swing.JFormattedTextField(cpf);&#xd;&#xa;}&#xd;&#xa;catch (Exception e){&#xd;&#xa;}"/>
               </AuxValues>
